--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Recent_Spotify_History.csv
 Spotify_History2014-Aug2025.csv
 Spotify_History2014-Recent.csv
 lucid-parsec-464412-t8-75d0c2e2a5fa.json
+Archived_CSV/Spotify_History2014-Recent.csv
