--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,49 @@ Spotify_History2014-Aug2025.csv
 Spotify_History2014-Recent.csv
 lucid-parsec-464412-t8-75d0c2e2a5fa.json
 Archived_CSV/Spotify_History2014-Recent.csv
+Spotify_History.csv
+2014_Sept-25th.csv
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.md
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+.vscode/
+.idea/
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*.json
+.streamlit/secrets.toml
+
+# Logs
+*.log
